# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
# Build system that allows editable installs
[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"


[project]
name = "tether_utils"
version = "1.3.11"
requires-python = ">=3.9"
readme = "README.md"
authors = [
  { name = "Joaquín Grez", email = "joaco@tether.education" },
]
maintainers = [
  { name = "Alfonso Irarrázaval", email = "alfonso@tether.education" },
]
description = "Thin wrapper for Tether Utils / AWS SNS and Others"
license = { text = "MIT" }
classifiers =[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "boto3",
    "drf-jwt",
    "djangorestframework",
    "drf-yasg",
    "pycountry"
]

[project.optional-dependencies]
dev = [
  "black",
]

[project.urls]
Homepage = "https://github.com/TetherEducation/wrapper-utils"
Documentation = "https://github.com/TetherEducation/wrapper-utils/blob/master/README.md"
Source = "https://github.com/TetherEducation/wrapper-utils"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

packages = [
    { name = "aws_secretmanager", from = "wrapper_utils" },
    { name = "aws_sns", from = "wrapper_utils" },
    { name = "tether_utils", from = "wrapper_utils" },
]

# Versions
# 1.3.3  -> Migrating to pyproject.toml
# 1.3.4
# 1.3.5  -> All packages
# 1.3.6  -> Folder refactor
# 1.3.7  -> Enhance countries data
# 1.3.8  -> Fix issues in countries with 1.3.7
# 1.3.9  -> Fix missing dependency
# 1.3.11 -> Custom country data